fix layout jumping

--- a/styles/main.css
+++ b/styles/main.css
@@ -23,8 +23,8 @@ body {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    max-height: 300px;
-    max-width: 300px;
+    height: 300px;
+    width: 300px;
     border-radius: 100%;
 }
 
